# trnfft

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  neuron.yml  publish.yml
benchmarks/: bench_fft.py  conftest.py
docs/: architecture.md  aws_setup.md  benchmarks.md  developing_kernels.md  index.md  installation.md  quickstart.md
docs/api/: complex.md  fft.md  nki.md  nn.md
docs/design-notes/: fft-is-a-gemm.md  kahan-characterization.md  kernel-profiling.md
examples/: speech_stft.py
infra/terraform/: README.md  main.tf
scripts/: bench_text_to_md.py  bench_to_md.py  collect_nki_artifacts.sh  reproduce_nl_load_transpose2d.py  run_benchmarks.sh  run_neuron_profile.sh  run_neuron_tests.sh  run_precision_characterization.sh  run_simulator_tests.sh
tests/: conftest.py  test_complex.py  test_fft.py  test_multicore.py  test_nki_sim.py  test_nn.py  test_precision_modes.py  test_stft.py
trnfft/: __init__.py  api.py  complex.py  fft_core.py  nn.py  plan.py  precision.py  stockham.py
trnfft/nki/: __init__.py  autograd.py  butterfly.py  dispatch.py  multicore.py  stockham.py
