[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trnfft"
version = "0.10.0"
description = "FFT and complex-valued tensor operations for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scttfrdmn@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    # neuronxcc is not on public PyPI; it ships with the Deep Learning AMI Neuron.
    # We pin >=2.24 because the NKI kernels use the 2.24+ nc_matmul calling
    # convention and partition-dim tile layout. See docs/installation.md for the
    # validated AMI/SDK versions.
    "neuronxcc>=2.24",
    "torch-neuronx>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "scipy>=1.11",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/trnsci/trnfft"
Documentation = "https://trnsci.dev/trnfft/"
Repository = "https://github.com/trnsci/trnfft"
Issues = "https://github.com/trnsci/trnfft/issues"

[tool.setuptools.packages.find]
include = ["trnfft*"]

[tool.pytest.ini_options]
markers = [
    "neuron: requires Neuron hardware (trn1/trn2 instance)",
]
testpaths = ["tests"]
