[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trnfft"
version = "0.21.0"
description = "FFT and complex-valued tensor operations for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scttfrdmn@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    # nki is not on public PyPI; it ships with the Deep Learning AMI Neuron.
    # We pin >=0.3.0 because the NKI kernels use the 0.3.0 nc_matmul kwargs
    # calling convention (dst=, stationary=, moving=, accumulate=True) and
    # nisa.tensor_copy for PSUM→SBUF materialization. See
    # docs/installation.md for the validated AMI/SDK versions.
    "nki>=0.3.0",
    "torch-neuronx>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "pre-commit>=3.5",
    "scipy>=1.11",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/trnsci/trnfft"
Documentation = "https://trnsci.dev/trnfft/"
Repository = "https://github.com/trnsci/trnfft"
Issues = "https://github.com/trnsci/trnfft/issues"

[tool.setuptools.packages.find]
include = ["trnfft*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/benchmark_results", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E741",  # ambiguous variable names (math code uses I, l, N, etc.)
    "B008",  # function calls in argument defaults (torch.tensor() etc. are fine)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # tests re-import by design in parametrized sections

[tool.pytest.ini_options]
markers = [
    "neuron: requires Neuron hardware (trn1/trn2 instance)",
    "nki_simulator: runs under nki.simulate (CPU); requires nki>=0.3.0 + TRNFFT_USE_SIMULATOR=1",
]
testpaths = ["tests"]
